# cs229_project

./: .envrc  .gitignore  README.md  cs229.sty  milestone.fdb_latexmk  milestone.fls  milestone.md  milestone.tex  modal_app.py  pyproject.toml
docs/: cld_clf.md  handout.md  literature_review.md  milestone.aux  milestone.out  milestone.tex  plan.md  plan_clf.md
notebooks/: _build_eegnet_bnci.py  _build_eegnet_bnci_v2.py  _build_mirepnet.py  _build_mirepnet_bnci.py  _build_neurogpt.py  _build_v4.py  _run_nb.py  _run_v4.py  eegnet_kmin_bnci2014001.ipynb  eegnet_kmin_bnci2014001_v2.ipynb  eegnet_loso_src_mirror.ipynb  mirepnet_kmin.ipynb  mirepnet_kmin_bnci2014001.ipynb  neurogpt_kmin_bnci2014001.ipynb  reve_kmin_convexnn.ipynb  reve_kmin_convexnn_updated.ipynb  reve_kmin_convexnn_v3.ipynb  reve_kmin_convexnn_v4.ipynb  reve_lora_finetune.ipynb
notebooks/.ipynb_checkpoints/: eegnet_kmin_bnci2014001-checkpoint.ipynb  eegnet_loso_src_mirror-checkpoint.ipynb  mirepnet_kmin_bnci2014001-checkpoint.ipynb  neurogpt_kmin_bnci2014001-checkpoint.ipynb  reve_kmin_convexnn-checkpoint.ipynb  reve_kmin_convexnn_updated-checkpoint.ipynb  reve_kmin_convexnn_v3-checkpoint.ipynb  reve_lora_finetune-checkpoint.ipynb
results/: preliminary.json  summary_table.md
results/eegnet_bnci2014001_kmin_nb/: comparison_20260529-115409.csv  convex_summary_20260529-115409.csv  finetune_summary_20260529-115409.csv  lora_summary_20260529-115409.csv  per_split_20260529-115409.csv  source_summary_20260529-115409.csv
scripts/: download_data.py  full_sweep_when_ready.sh  make_figures.py  run_full_baselines.py  run_preliminary.py  summarize_run.py
src/: data.py  eval.py  models.py  runner.py  train.py
src/adapters/: __init__.py  base.py  (+2 more)
tests/: conftest.py
(+165 files in other folders)
